force-app/main/default/objects/Claim/fields/DSALES_Motivo_rechazo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Motivo_rechazo__c</fullName>
    <description>Muestra el motivo de rechazo del siniestro</description>
    <label>Motivo de rechazo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cobertura no contratada</fullName>
            </value>
            <value>
                <fullName>Es una exclusión del producto</fullName>
            </value>
            <value>
                <fullName>Moto distinta al uso registrado en la póliza</fullName>
            </value>
            <value>
                <fullName>Póliza cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>