force-app/main/default/objects/Claim/fields/DSALES_MotivodeDevolucion__c.field-meta.xml
<CustomField>
    <fullName>DSALES_MotivodeDevolucion__c</fullName>
    <description>Campo para recibir el motivo por el cual se regreso el siniestro cuando pasa a estatus requerimiento de información</description>
    <label>Motivo de devolución</label>
    <type>TextArea</type>
</CustomField>