force-app/main/default/objects/Claim/fields/DSALES_NumeroPagos__c.field-meta.xml
<CustomField>
    <fullName>DSALES_NumeroPagos__c</fullName>
    <description>Campo para contar los pagos que tuvo un siniestro</description>
    <label>Número de pagos</label>
    <summaryFilterItems>
        <field>ClaimPaymentSummary.DSALES_Tipopago__c</field>
        <operation>equals</operation>
        <value>Pago a Cliente, Pago a cuenta Coppel</value>
    </summaryFilterItems>
    <summaryForeignKey>ClaimPaymentSummary.ClaimId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>