force-app/main/default/objects/Claim/fields/DSALES_SaldoInsoluto__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SaldoInsoluto__c</fullName>
    <description>Campo para recibir el saldo insoluto que tiene el cliente.</description>
    <label>Saldo insoluto</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>