force-app/main/default/objects/Claim/fields/DSALES_SolucionaDevoluci_n__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SolucionaDevoluci_n__c</fullName>
    <description>Campo para registrar la solución y conocer la información a devolver</description>
    <label>Solución a devolución</label>
    <length>80</length>
    <type>Text</type>
</CustomField>