force-app/main/default/objects/Claim/fields/DSALES_SolucionDevolver__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SolucionDevolver__c</fullName>
    <description>Campo para recibir la información que falta por entregar el cliente para el pago de su siniestro</description>
    <inlineHelpText>Información requerida para pagar el siniestro</inlineHelpText>
    <label>Solución a devolver</label>
    <type>TextArea</type>
</CustomField>