force-app/main/default/objects/Claim/fields/dsalesFechaAltaSiniestro__c.field-meta.xml
<CustomField>
    <fullName>dsalesFechaAltaSiniestro__c</fullName>
    <description>Campo para registrar la fecha cuando se aperturo el siniestro</description>
    <label>Fecha de alta del siniestro</label>
    <type>DateTime</type>
</CustomField>