force-app/main/default/objects/Claim/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Modelo del dispositivo (celulares)</description>
    <label>Modelo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>