force-app/main/default/objects/Claim/recordTypes/DSALES_Nuevo_Siniestro.recordType-meta.xml
<RecordType>
    <fullName>DSALES_Nuevo_Siniestro</fullName>
    <active>true</active>
    <label>Nuevo Siniestro</label>
</RecordType>