force-app/main/default/objects/Claim/recordTypes/dsalesSiniestroSC.recordType-meta.xml
<RecordType>
    <fullName>dsalesSiniestroSC</fullName>
    <active>true</active>
    <description>Registros de siniestros de seguro de celulares</description>
    <label>Siniestro SC</label>
</RecordType>